; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/hyperv/extr_hv_init.c_clear_hv_tscchange_cb.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/hyperv/extr_hv_init.c_clear_hv_tscchange_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hv_reenlightenment_control = type { i64 }

@HV_X64_MSR_REENLIGHTENMENT_CONTROL = common dso_local global i32 0, align 4
@hv_reenlightenment_cb = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @clear_hv_tscchange_cb() #0 {
  %1 = alloca %struct.hv_reenlightenment_control, align 8
  %2 = call i32 (...) @hv_reenlightenment_available()
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %5, label %4

4:                                                ; preds = %0
  br label %15

5:                                                ; preds = %0
  %6 = load i32, i32* @HV_X64_MSR_REENLIGHTENMENT_CONTROL, align 4
  %7 = bitcast %struct.hv_reenlightenment_control* %1 to i32*
  %8 = load i32, i32* %7, align 8
  %9 = call i32 @rdmsrl(i32 %6, i32 %8)
  %10 = getelementptr inbounds %struct.hv_reenlightenment_control, %struct.hv_reenlightenment_control* %1, i32 0, i32 0
  store i64 0, i64* %10, align 8
  %11 = load i32, i32* @HV_X64_MSR_REENLIGHTENMENT_CONTROL, align 4
  %12 = bitcast %struct.hv_reenlightenment_control* %1 to i32*
  %13 = load i32, i32* %12, align 8
  %14 = call i32 @wrmsrl(i32 %11, i32 %13)
  store i32* null, i32** @hv_reenlightenment_cb, align 8
  br label %15

15:                                               ; preds = %5, %4
  ret void
}

declare dso_local i32 @hv_reenlightenment_available(...) #1

declare dso_local i32 @rdmsrl(i32, i32) #1

declare dso_local i32 @wrmsrl(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
